--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,21 @@ lto = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gloo-console = "0.2.1"
+gloo-timers = { version = "0.2.3", features = ["futures"] }
 wasm-bindgen = "0.2.79"
+web-sys = { version = "0.3.56", features = [
+    "CssStyleDeclaration",
+    "Document",
+    "DomTokenList",
+    "Element",
+    "FontFace",
+    "HtmlAnchorElement",
+    "HtmlCollection",
+    "HtmlElement",
+    "HtmlImageElement",
+    "KeyboardEvent",
+    "NodeList",
+] }
 wee_alloc = "0.4.5"
 yew = "0.19.3"
