Further adjustments to deployment.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "devDependencies": {
+    "@creativebulma/bulma-collapsible": "^1.0.4",
     "bulma": "^0.9.3",
     "bulma-timeline": "^3.0.5",
-    "@creativebulma/bulma-collapsible": "^1.0.4",
+    "copyfiles": "^2.4.1",
     "esbuild": "^0.14.29",
     "replace-in-file": "^6.3.2"
   },
   "scripts": {
-    "build:bulmaCollapsible": "esbuild ./node_modules/@creativebulma/bulma-collapsible --bundle --minify --format=esm --main-fields=browser,module,main --outfile=./assets/bulma-collapsible.min.js",
-    "fix:bulmaCollapsible": "replace-in-file 'this._collapsed||(this.element.style.height=this._originalHeight)' '' ./assets/bulma-collapsible.min.js"
+    "bulma": "copyfiles -f ./node_modules/bulma/css/bulma.min.css assets",
+    "prebulma-collapsible": "copyfiles -f ./node_modules/@creativebulma/bulma-collapsible/dist/css/bulma-collapsible.min.css assets",
+    "bulma-collapsible": "esbuild ./node_modules/@creativebulma/bulma-collapsible --bundle --minify --format=esm --main-fields=browser,module,main --outfile=./assets/bulma-collapsible.min.js",
+    "postbulma-collapsible": "replace-in-file 'this._collapsed||(this.element.style.height=this._originalHeight)' '' ./assets/bulma-collapsible.min.js",
+    "bulma-timeline": "copyfiles -f ./node_modules/bulma-timeline/dist/css/bulma-timeline.min.css assets",
+    "presetup": "npm run bulma",
+    "setup": "npm run bulma-collapsible",
+    "postsetup": "npm run bulma-timeline"
   }
 }
